springboot-k8s-mysql/src/main/resources/deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: springboot-k8s-mysql
  labels:
    name: springboot-k8s-mysql
spec:
  ports:
    - nodePort: 30163 
      port: 8080      
      targetPort: 8080  
      protocol: TCP
  selector:           
    app: springboot-k8s-mysql
  type: NodePort       

---
apiVersion: apps/v1 
kind: Deployment    
metadata:              
  name: springboot-k8s-mysql
spec:                
  selector:         
    matchLabels:
      app: springboot-k8s-mysql
  replicas: 1
  template:
    metadata:
      labels:        
        app: springboot-k8s-mysql
    spec:
      containers:
        - name: springboot-k8s-mysql
          image: twgraepel/springboot-k8s-mysql:latest
          ports:
            - containerPort: 8080                
          env:   # Setting Enviornmental Variables
          - name: DB_HOST   # Setting Database host address from configMap
            valueFrom: 
              configMapKeyRef:
                name: db-conf  # name of configMap
                key: host
          - name: DB_NAME  # Setting Database name from configMap
            valueFrom:
              configMapKeyRef:
                name: db-conf 
                key: name
          - name: DB_USERNAME  # Setting Database username from Secret
            valueFrom:
              secretKeyRef:
                name: db-credentials # Secret Name
                key: username
          - name: DB_PASSWORD # Setting Database password from Secret
            valueFrom:
              secretKeyRef:
                name: db-credentials
                key: password
