springboot-k8s-mysql/src/main/resources/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-example
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: springboot-k8s-mysql
              servicePort: 8080
            path: /(.*)
          - backend:
              serviceName: mysql
              servicePort: 3306
            path: /mysql(/|$)(.*)
